# hildon

./: .gitignore  AUTHORS  ChangeLog  ChangeLog-hildon-lgpl  ChangeLog.2  Changelog  HACKING  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  autogen.sh  config.h.in  configure  configure.ac  gtk-doc.make  hildon-libs.pc.in
doc/: Makefile.am  Makefile.in  building.sgml  compiling.sgml  gtk-doc.make  hildon-docs.sgml  hildon-libs-docs.sgml  hildon-libs-docs.xml  hildon-libs.types  hildon-sections.txt  hildon.types  migration.sgml  resources.sgml  running.sgml  visual_index.xml
doc/design/: abstract_vs_modular_plugin_widgets.dia  hildon-plugin-widget.txt
doc/tmpl/: gtk-infoprint.sgml  hildon-add-home-dialog.sgml  hildon-app.sgml  hildon-appview.sgml  hildon-banner.sgml  hildon-calendar-popup.sgml  hildon-caption.sgml  hildon-code-dialog.sgml  hildon-color-button.sgml  hildon-color-chooser-dialog.sgml  hildon-color-chooser.sgml  hildon-color-popup.sgml  hildon-color-selector.sgml  hildon-composite-widget.sgml  hildon-controlbar.sgml  hildon-date-editor.sgml  hildon-defines.sgml  hildon-dialoghelp.sgml  hildon-file-details-dialog.sgml  hildon-file-handling-note.sgml  hildon-find-object-dialog.sgml  hildon-find-toolbar.sgml  hildon-font-selection-dialog.sgml  hildon-get-password-dialog.sgml  hildon-grid-item-private.sgml  hildon-grid-item.sgml  hildon-grid.sgml  hildon-hvolumebar.sgml  hildon-hwr-area.sgml  hildon-input-mode-hint.sgml  hildon-insert-object-dialog.sgml  hildon-libs-enum-types.sgml  hildon-libs-unused.sgml  hildon-marshalers.sgml  (+19 more)
examples/: Makefile.am  Makefile.static  hildon-app-menu-example.c  hildon-banner-dnd-example.c  hildon-banner-example.c  hildon-banner-long-example.c  hildon-bread-crumb-trail-example.c  hildon-button-example.c  hildon-caption-example.c  hildon-check-button-example.c  hildon-code-dialog-example.c  hildon-color-button-example.c  hildon-color-chooser-example.c  hildon-color-pop-example.c  hildon-controlbar-example.c  hildon-date-button-example.c  hildon-date-editor-example.c  hildon-dialog-example.c  hildon-edit-toolbar-example.c  hildon-entry-example.c  hildon-find-toolbar-example.c  hildon-finger-example.c  hildon-get-password-dialog-example.c  hildon-gtk-window-take-screenshot-sync.c  hildon-gtk-window-take-screenshot-then-wait-example.c  hildon-hvolumebar-example.c  hildon-hvolumebar-insensitive-example.c  hildon-hvolumebar-insensitive-map-example.c  hildon-hvolumebar-timer-example.c  hildon-icon-sizes-example.c  hildon-insensitive-example.c  hildon-live-search-example.c  hildon-live-search-grid-example.c  hildon-logical-color-example.c  hildon-login-dialog-example.c  hildon-lookup-example.c  hildon-note-example.c  hildon-number-editor-example.c  hildon-pannable-area-buttons-scroll-example.c  hildon-pannable-area-example-2.c  (+37 more)
hildon-widgets/: Makefile.am  Makefile.in  gtk-infoprint.c  gtk-infoprint.h  hildon-add-home-dialog.c  hildon-add-home-dialog.h  hildon-app-private.h  hildon-app.c  hildon-app.h  hildon-appview.c  hildon-appview.h  hildon-banner.c  hildon-banner.h  hildon-calendar-popup.c  hildon-calendar-popup.h  hildon-caption.c  hildon-caption.h  hildon-code-dialog.c  hildon-code-dialog.h  hildon-color-button.c  hildon-color-button.h  hildon-color-chooser-button.c  hildon-color-chooser-button.h  hildon-color-chooser-dialog.c  hildon-color-chooser-dialog.h  hildon-color-chooser.c  hildon-color-chooser.h  hildon-color-popup.c  hildon-color-popup.h  hildon-color-selector.c  hildon-color-selector.h  hildon-composite-widget.c  hildon-composite-widget.h  hildon-controlbar.c  hildon-controlbar.h  hildon-date-editor.c  hildon-date-editor.h  hildon-defines.c  hildon-defines.h  hildon-dialoghelp.c  (+73 more)
hildon-widgets-plugins/: Makefile.am  hildon-color-chooser-dialog-hsv.c  hildon-color-chooser-hsv.c
pkgconfig/: Makefile.am  hildon-libs.pc.in  hildon-widgets.pc.in  hildon.pc.in
po/: Makefile.am  Makefile.in  POTFILES  POTFILES.in  README  en_GB.po  porules.mk.in
src/: Makefile.am  gtk-infoprint.c  gtk-infoprint.h  hildon-add-home-dialog.h  hildon-animation-actor.c  hildon-app-menu-private.h  hildon-app-menu.c  hildon-app-menu.h  hildon-app-private.h  hildon-app.c  hildon-app.h  hildon-banner-private.h  hildon-banner.c  hildon-banner.h  hildon-bread-crumb-trail.c  hildon-bread-crumb-trail.h  hildon-bread-crumb-widget.c  hildon-bread-crumb-widget.h  hildon-bread-crumb.c  hildon-bread-crumb.h  hildon-button-helpers.c  hildon-button-helpers.h  hildon-button.c  hildon-button.h  hildon-calendar-popup-private.h  hildon-calendar-popup.c  hildon-calendar-popup.h  hildon-calendar-private.h  hildon-calendar.c  hildon-calendar.h  hildon-caption-private.h  hildon-caption.c  hildon-caption.h  hildon-check-button.c  hildon-check-button.h  hildon-code-dialog-private.h  hildon-code-dialog.c  hildon-code-dialog.h  hildon-color-button-private.h  hildon-color-button.c  (+147 more)
tests/: Makefile.am  Makefile.in  TEST-CASES.txt  check-hildon-banner.c  check-hildon-calendar-popup.c  check-hildon-caption.c  check-hildon-code-dialog.c  check-hildon-color-button.c  check-hildon-color-chooser.c  check-hildon-color-popup.c  check-hildon-color-selector.c  check-hildon-composite-widget.c  check-hildon-controlbar.c  check-hildon-date-editor.c  check-hildon-defines.c  check-hildon-dialoghelp.c  check-hildon-find-toolbar.c  check-hildon-font-selection-dialog.c  check-hildon-get-password-dialog.c  check-hildon-helper.c  check-hildon-name-password-dialog.c  check-hildon-note.c  check-hildon-number-editor.c  check-hildon-picker-button.c  check-hildon-program.c  check-hildon-range-editor.c  check-hildon-scroll-area.c  check-hildon-seekbar.c  check-hildon-set-password-dialog.c  check-hildon-sort-dialog.c  check-hildon-system-sound.c  check-hildon-time-editor.c  check-hildon-time-picker.c  check-hildon-volumebar-range.c  check-hildon-volumebar.c  check-hildon-weekday-picker.c  check-hildon-window.c  check-hildon-wizard-dialog.c  check_test.c  check_utils.c  (+6 more)
ut/: Makefile.am  Makefile.in  hildon-clock-widgets_tests.c  hildon-widgets_tests.c  tc_banner_truncate.c
(+179 files in other folders)
