MAINTAINERCLEANFILES			= Makefile.in

if BUILD_EXAMPLES
noinst_PROGRAMS				= hildon-window-example 		\
					  hildon-banner-example			\
					  hildon-caption-example		\
					  hildon-weekday-picker-example 	\
					  hildon-sort-dialog-example		\
					  hildon-controlbar-example		\
					  hildon-note-example			\
					  hildon-time-picker-example		\
					  hildon-color-chooser-example		\
					  hildon-color-button-example		\
					  hildon-login-dialog-example		\
					  hildon-time-editor-example		\
					  hildon-icon-sizes-example		\
					  hildon-insensitive-example		\
					  hildon-get-password-dialog-example	\
					  hildon-set-password-dialog-example	\
					  hildon-window-menu-example		\
					  hildon-window-cmn-menu-example	\
					  hildon-vvolumebar-example		\
					  hildon-toolbar-example		\
					  hildon-code-dialog-example		\
					  hildon-hvolumebar-example		\
					  hildon-lookup-example			\
					  hildon-number-editor-example		\
					  hildon-scrolled-window-example	\
					  hildon-color-pop-example

# HIldon window
hildon_window_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_window_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_window_example_SOURCES		= hildon-window-example.c

# Hildon banner
hildon_banner_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_banner_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_banner_example_SOURCES		= hildon-banner-example.c

# Hildon caption
hildon_caption_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_caption_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_caption_example_SOURCES		= hildon-caption-example.c

# Hildon weekday picker
hildon_weekday_picker_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_weekday_picker_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_weekday_picker_example_SOURCES	= hildon-weekday-picker-example.c

# Hildon time picker
hildon_time_picker_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_time_picker_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_time_picker_example_SOURCES	= hildon-time-picker-example.c

# Hildon time editor
hildon_time_editor_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_time_editor_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_time_editor_example_SOURCES	= hildon-time-editor-example.c

# Hildon sort dialog
hildon_sort_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_sort_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_sort_dialog_example_SOURCES	= hildon-sort-dialog-example.c

# Hildon control bar
hildon_controlbar_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_controlbar_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_controlbar_example_SOURCES	= hildon-controlbar-example.c

# Hildon note example
hildon_note_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_note_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_note_example_SOURCES		= hildon-note-example.c

# Hildon color chppser example
hildon_color_chooser_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_color_chooser_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_color_chooser_example_SOURCES	= hildon-color-chooser-example.c

# Hildon color button example
hildon_color_button_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_color_button_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_color_button_example_SOURCES	= hildon-color-button-example.c

# Hildon color pop example
hildon_color_pop_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_color_pop_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_color_pop_example_SOURCES	= hildon-color-pop-example.c

# Hildon color button example
hildon_login_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_login_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_login_dialog_example_SOURCES	= hildon-login-dialog-example.c

# HIldon window
hildon_icon_sizes_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_icon_sizes_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_icon_sizes_example_SOURCES	= hildon-icon-sizes-example.c

# HIldon insensitive example
hildon_insensitive_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_insensitive_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_insensitive_example_SOURCES	= hildon-insensitive-example.c

# HIldon get password dialog example
hildon_get_password_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_get_password_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_get_password_dialog_example_SOURCES	= hildon-get-password-dialog-example.c

# HIldon set password dialog example
hildon_set_password_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_set_password_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_set_password_dialog_example_SOURCES	= hildon-set-password-dialog-example.c

# HIldon window menu example
hildon_window_menu_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_window_menu_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_window_menu_example_SOURCES	= hildon-window-menu-example.c

# Hildon window common menu example
hildon_window_cmn_menu_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_window_cmn_menu_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_window_cmn_menu_example_SOURCES	= hildon-window-cmn-menu-example.c

# Hildon vvolume bar example
hildon_vvolumebar_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_vvolumebar_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_vvolumebar_example_SOURCES	= hildon-vvolumebar-example.c

# Hildon hvolume bar example
hildon_hvolumebar_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_hvolumebar_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_hvolumebar_example_SOURCES	= hildon-hvolumebar-example.c

# Hildon toolbar example
hildon_toolbar_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_toolbar_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_toolbar_example_SOURCES		= hildon-toolbar-example.c

# Hildon lock code dialog example
hildon_code_dialog_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_code_dialog_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_code_dialog_example_SOURCES	= hildon-code-dialog-example.c

# Hildon lookup example
hildon_lookup_example_LDADD		= $(HILDON_OBJ_LIBS)
hildon_lookup_example_CFLAGS		= $(HILDON_OBJ_CFLAGS)
hildon_lookup_example_SOURCES		= hildon-lookup-example.c

# Hildon number editor
hildon_number_editor_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_number_editor_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_number_editor_example_SOURCES	= hildon-number-editor-example.c

# Hildon scrolled window
hildon_scrolled_window_example_LDADD	= $(HILDON_OBJ_LIBS)
hildon_scrolled_window_example_CFLAGS	= $(HILDON_OBJ_CFLAGS)
hildon_scrolled_window_example_SOURCES	= hildon-scrolled-window-example.c

endif
